--- a/layouts/shortcodes/map.html
+++ b/layouts/shortcodes/map.html
@@ -1,171 +1,109 @@
-
 {{- if not (.Get "name") -}}
-    <p>Error: No map name specified. Please specify a map name in the shortcode. Example: \{\{< map name="mapname" >\}\}</p>
-{{- else if not ((site.Params.Get "hugo-maps").Get (.Get "name")) -}}
-    <p>Error: Map name {{- .Get "name" -}} not found in config. Please check your config file.</p>
-{{- else -}}
+<p>
+  Error: No map name specified. Please specify a map name in the shortcode.
+  Example: \{\{< map name="mapname" >\}\}
+</p>
+{{- else if not (index (index .Site.Params "hugo-maps") (.Get "name")) -}}
+<p>
+  Error: Map name {{- .Get "name" -}} not found in config. Please check your
+  config file.
+</p>
+{{- else -}} {{- $mapname := md5 now.UnixNano -}} {{- $mapparams := (index
+(index site.Params "hugo-maps") (.Get "name")) -}} {{- $baseparams :=
+(resources.Get "default/mapparams.yaml") | unmarshal -}} {{- $defaultparams :=
+(index site.Params "hugo-maps").default -}} {{- $mapparams = merge $baseparams
+$defaultparams $mapparams .Params -}} {{- $mapstyle := (dict) -}} {{- if eq
+$mapparams.type "remote" -}} {{- $sources := (dict "sources" $mapparams.sources)
+-}} {{- $glyphs := dict "glyphs" (print site.BaseURL
+"glyphs/{fontstack}/{range}.pbf") -}} {{- $mapstyle = resources.Get (printf
+"map-styles/%s.json" $mapparams.style) | unmarshal -}} {{- $mapstyle = merge
+$mapstyle $sources -}} {{- if not $mapstyle.glyphs -}} {{- $mapstyle = merge
+$mapstyle $glyphs -}} {{- end -}} {{- else -}} {{- $EPSILON := 0.00000000000001
+-}} {{- $xtile_end := 0 -}} {{- $ytile_end := 0 -}} {{- $xtile_start := 0 -}}
+{{- $ytile_start := 0 -}} {{- $X_start := 0 -}} {{- $X_end := 0 -}} {{- $Y_start
+:= 0 -}} {{- $Y_end := 0 -}} {{- $Z2 := 0 -}} {{- range $zoom := seq
+$mapparams.tilesMinZoom $mapparams.tilesMaxZoom -}} {{- $X_start = index
+($mapparams.Get "wm-bounding-box") 0 -}} {{- $Y_start = index ($mapparams.Get
+"wm-bounding-box") 3 -}} {{- $X_end = index ($mapparams.Get "wm-bounding-box") 2
+-}} {{- $Y_end = index ($mapparams.Get "wm-bounding-box") 1 -}} {{- $Z2 =
+math.Pow 2 $zoom -}} {{- if le $X_start 0 -}} {{- $xtile_start = 0 -}} {{- else
+if ge $X_start 1 -}} {{- $xtile_start = sub (int $Z2) 1 -}} {{- else -}} {{-
+$xtile_start = int (math.Floor (mul (add $X_start $EPSILON) $Z2)) -}} {{- end
+-}} {{- if le $Y_start 0 -}} {{- $ytile = 0 -}} {{- else if ge $Y_start 1 -}}
+{{- $ytile_start = sub (int $Z2) 1 -}} {{- else -}} {{- $ytile_start = int
+(math.Floor (mul (add $Y_start $EPSILON) $Z2)) -}} {{- end -}} {{- if le $X_end
+0 -}} {{- $xtile_end = 0 -}} {{- else if ge $X_end 1 -}} {{- $xtile_end = sub
+(int $Z2) 1 -}} {{- else -}} {{- $xtile_end = int (math.Floor (mul (add $X_end
+$EPSILON) $Z2)) -}} {{- end -}} {{- if le $Y_end 0 -}} {{- $ytile = 0 -}} {{-
+else if ge $Y_end 1 -}} {{- $ytile_end = sub (int $Z2) 1 -}} {{- else -}} {{-
+$ytile_end = int (math.Floor (mul (add $Y_end $EPSILON) $Z2)) -}} {{- end -}}
+{{- range $xtile := seq $xtile_start $xtile_end -}} {{- range $ytile := seq
+$ytile_start $ytile_end -}} {{- $tileurl := replace $mapparams.tiles "{z}" $zoom
+-}} {{- $tileurl := replace $tileurl "{x}" $xtile -}} {{- $tileurl := replace
+$tileurl "{y}" $ytile -}} {{- $cacheKey := (print $tileurl ) -}} {{- $tile :=
+resources.GetRemote $tileurl (dict "key" $cacheKey) -}} {{- $newtile := $tile |
+resources.Copy (printf "tiles/%d/%d/%d.pbf" $zoom $xtile $ytile) -}} {{- if
+$newtile.Permalink -}} {{- end -}} {{- end -}} {{- end -}} {{- end -}} {{- end
+-}}
 
-
-{{- $mapname := md5 now.UnixNano -}}
-
-{{- $mapparams := (site.Params.Get "hugo-maps").Get (.Get "name") -}}
-{{- $baseparams := (resources.Get "default/mapparams.yaml") | unmarshal -}}
-{{- $defaultparams := (site.Params.Get "hugo-maps").default -}}
-
-{{- $mapparams = merge $baseparams $defaultparams $mapparams .Params -}}
-
-{{- $mapstyle := (dict) -}}
-
-{{- if eq $mapparams.type "remote" -}}
-
-    {{- $sources := (dict "sources" $mapparams.sources) -}}
-    {{- $glyphs := dict "glyphs" (print site.BaseURL "glyphs/{fontstack}/{range}.pbf") -}}
-
-    {{- $mapstyle = resources.Get (printf "map-styles/%s.json" $mapparams.style) | unmarshal -}}
-
-    {{- $mapstyle = merge $mapstyle $sources -}}
-
-    {{- if not $mapstyle.glyphs -}}
-        {{- $mapstyle = merge $mapstyle $glyphs -}}
-    {{- end -}}
-
-{{- else -}}
-
-    {{- $EPSILON := 0.00000000000001 -}}
-
-
-    {{- $xtile_end := 0 -}}
-    {{- $ytile_end := 0 -}}
-    {{- $xtile_start := 0 -}}
-    {{- $ytile_start := 0 -}}
-
-    {{- $X_start := 0 -}}
-    {{- $X_end := 0 -}}
-    {{- $Y_start := 0 -}}
-    {{- $Y_end := 0 -}}
-
-    {{- $Z2 := 0 -}}
-
-        {{- range $zoom := seq $mapparams.tilesMinZoom $mapparams.tilesMaxZoom -}}
-
-        {{- $X_start = index ($mapparams.Get "wm-bounding-box") 0 -}}
-        {{- $Y_start = index ($mapparams.Get "wm-bounding-box") 3 -}}
-
-        {{- $X_end = index ($mapparams.Get "wm-bounding-box") 2 -}}
-        {{- $Y_end = index ($mapparams.Get "wm-bounding-box") 1 -}}
-
-        {{- $Z2 = math.Pow 2 $zoom -}}
-        
-        {{- if le $X_start 0 -}}
-            {{- $xtile_start = 0 -}}
-        {{- else if ge $X_start 1 -}}
-            {{- $xtile_start = sub (int $Z2) 1 -}}
-        {{- else -}}
-            {{- $xtile_start = int (math.Floor (mul (add $X_start $EPSILON) $Z2)) -}}
-        {{- end -}}
-
-        {{- if le $Y_start 0 -}}
-            {{- $ytile = 0 -}}
-        {{- else if ge $Y_start 1 -}}
-            {{- $ytile_start = sub (int $Z2) 1 -}}
-        {{- else -}}
-            {{- $ytile_start = int (math.Floor (mul (add $Y_start $EPSILON) $Z2)) -}}
-        {{- end -}}
-
-        {{- if le $X_end 0 -}}
-        {{- $xtile_end = 0 -}}
-        {{- else if ge $X_end 1 -}}
-            {{- $xtile_end = sub (int $Z2) 1 -}}
-        {{- else -}}
-            {{- $xtile_end = int (math.Floor (mul (add $X_end $EPSILON) $Z2)) -}}
-        {{- end -}}
-
-        {{- if le $Y_end 0 -}}
-            {{- $ytile = 0 -}}
-        {{- else if ge $Y_end 1 -}}
-            {{- $ytile_end = sub (int $Z2) 1 -}}
-        {{- else -}}
-            {{- $ytile_end = int (math.Floor (mul (add $Y_end $EPSILON) $Z2)) -}}
-        {{- end -}}
-
-        {{- range $xtile := seq  $xtile_start $xtile_end -}}
-            {{- range $ytile := seq  $ytile_start $ytile_end -}}
-                {{- $tileurl := replace $mapparams.tiles "{z}" $zoom -}}
-                {{- $tileurl := replace $tileurl "{x}" $xtile -}}
-                {{- $tileurl := replace $tileurl "{y}" $ytile -}}
-                
-                {{- $cacheKey := (print $tileurl ) -}}
-        
-                {{- $tile := resources.GetRemote $tileurl (dict "key" $cacheKey) -}}
-
-                {{- $newtile := $tile | resources.Copy (printf "tiles/%d/%d/%d.pbf" $zoom $xtile $ytile) -}}
-
-                {{- if $newtile.Permalink -}}
-
-                {{- end -}}
-
-
-            {{- end -}}
-        {{- end -}}
-        
-        {{- end -}}
-{{- end -}}
-
-    <script src='{{- (resources.Get "js/maplibre-gl.js").RelPermalink -}}'></script>
-    <link href='{{- (resources.Get "css/maplibre-gl.css").RelPermalink -}}' rel='stylesheet' />
-
+<script src='{{- (resources.Get "js/maplibre-gl.js").RelPermalink -}}'></script>
+<link
+  href='{{- (resources.Get "css/maplibre-gl.css").RelPermalink -}}'
+  rel="stylesheet"
+/>
 
 <style type="text/css">
-    #map-{{- $mapname -}} {
-        width: {{- .Get "width" | default $mapparams.width -}}; 
-        height: {{- .Get "height" | default $mapparams.height -}};
-    }
+  #map-{{- $mapname -}} {
+      width: {{- .Get "width" | default $mapparams.width -}};
+      height: {{- .Get "height" | default $mapparams.height -}};
+  }
 </style>
-    
-<div id='map-{{- $mapname -}}'>
-<!-- map will be rendered here -->
+
+<div id="map-{{- $mapname -}}">
+  <!-- map will be rendered here -->
 </div>
 
 <script type="text/javascript">
-    // run once page loaded
-    window.addEventListener("load", (event) => {
-        let map = new maplibregl.Map({
-                container: 'map-{{- $mapname -}}',
-                center:  {{- $mapparams.center -}},
-                minZoom: {{- $mapparams.minZoom -}},
-                maxZoom: {{- $mapparams.maxZoom -}},
-                zoom: {{- $mapparams.zoom -}},
-                bearing: {{- $mapparams.bearing -}},
-                minPitch: {{- $mapparams.minPitch -}},
-                maxPitch: {{- $mapparams.maxPitch -}},
-                pitch: {{- $mapparams.pitch -}},
-                antialias: {{- $mapparams.antialias -}},
-                attributionControl: {{ $mapparams.attributionControl }},
-                customAttribution: "{{ $mapparams.customAttribution }}",
-                interactive: {{- $mapparams.interactive -}},
-                style: {{- $mapstyle | jsonify | safeJS -}},
-            });
+  // run once page loaded
+  window.addEventListener("load", (event) => {
+      let map = new maplibregl.Map({
+              container: 'map-{{- $mapname -}}',
+              center:  {{- $mapparams.center -}},
+              minZoom: {{- $mapparams.minZoom -}},
+              maxZoom: {{- $mapparams.maxZoom -}},
+              zoom: {{- $mapparams.zoom -}},
+              bearing: {{- $mapparams.bearing -}},
+              minPitch: {{- $mapparams.minPitch -}},
+              maxPitch: {{- $mapparams.maxPitch -}},
+              pitch: {{- $mapparams.pitch -}},
+              antialias: {{- $mapparams.antialias -}},
+              attributionControl: {{ $mapparams.attributionControl }},
+              customAttribution: "{{ $mapparams.customAttribution }}",
+              interactive: {{- $mapparams.interactive -}},
+              style: {{- $mapstyle | jsonify | safeJS -}},
+          });
 
-            // add navigation control (the +/- zoom buttons)
-            {{ if $mapparams.navigationControl -}}
-            
-                map.addControl(new maplibregl.NavigationControl());
-            {{ end }}
-    
-            // add markers if any
-            {{ range $mapparams.markers -}}
-                new maplibregl.Marker()
-                    .setLngLat({{- .location -}})
-                    .setPopup(new maplibregl.Popup().setHTML("{{- .text -}}")) 
-                    .addTo(map);
-            {{- end -}}
+          // add navigation control (the +/- zoom buttons)
+          {{ if $mapparams.navigationControl -}}
 
-            // set feature state for each feature
-            map.on('data', function (e) {
-                {{ range $mapparams.setfeaturestate }}
-                    map.setFeatureState({{.feature}}, {{ .state }});
-                {{ end }}
-            });
-    })
+              map.addControl(new maplibregl.NavigationControl());
+          {{ end }}
+
+          // add markers if any
+          {{ range $mapparams.markers -}}
+              new maplibregl.Marker()
+                  .setLngLat({{- .location -}})
+                  .setPopup(new maplibregl.Popup().setHTML("{{- .text -}}"))
+                  .addTo(map);
+          {{- end -}}
+
+          // set feature state for each feature
+          map.on('data', function (e) {
+              {{ range $mapparams.setfeaturestate }}
+                  map.setFeatureState({{.feature}}, {{ .state }});
+              {{ end }}
+          });
+  })
 </script>
 {{- end -}}
+
