--- a/layouts/shortcodes/map.html
+++ b/layouts/shortcodes/map.html
@@ -78,7 +78,7 @@ $newtile.Permalink -}} {{- end -}} {{- end -}} {{- end -}} {{- end -}} {{- end
 
       var style = {{- $mapstyle | jsonify | safeJS -}};
 
-      var finalStyle = Object.assign({}, style, {"sources": {"protomaps": {"url": "pmtiles://" + PMTILES_URL}}});
+      var finalStyle = Object.assign({}, style, {"sources": {"protomaps": {"type": "vector","url": "pmtiles://" + PMTILES_URL}}});
 
       // this is so we share one instance across the JS code and the map renderer
       protocol.add(p);
